TR-2: Set up scripts for local versioning, sharing results.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ mono: none
 dotnet: 2.1.403
 solution: TrIdent.sln
 script:
+   - source ./do/.vars
    - dotnet build
    - cd TrIdent.Specifications
    - dotnet test
