--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ dotnet: 2.1.403
 solution: TrIdent.sln
 script:
    - source ./do/.vars
+   - bash ./do/showname
    - dotnet build
    - cd TrIdent.Specifications
    - dotnet test
