--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
   - export kd_version_patch=$(cat .version/patch | xargs)
   - export kd_version_build=$(cat .version/build | xargs)
   - export kd_version_suffix=-alpha.$kd_version_build
-  - echo "Building $kd_module version $kd_version_major.$kd_version_minor.$kd_version_patch.$kd_version_build"
+  - echo "Building $kd_project version $kd_version_major.$kd_version_minor.$kd_version_patch.$kd_version_build"
   - dotnet build
   - cd TrIdent.Specifications
   - dotnet test
