TI-2: Updating build/config scheme to work with all three methods (vs, cli, travis)

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 
 .vscode/
 
+# Ignore the file generated to dynamically update version information
+metadata.generated.csproj
+
 # User-specific files
 *.suo
 *.user
