--- a/TrIdent.Specifications/TrIdent.Specifications.csproj
+++ b/TrIdent.Specifications/TrIdent.Specifications.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <PackageId>$(kd_module).Specifications</PackageId>
-    <Version>$(kd_version_major).$(kd_version_minor).$(kd_version_patch)$(kd_version_suffix)</Version>
-    <AssemblyVersion>$(kd_version_major).$(kd_version_minor).$(kd_version_build).$(kd_version_patch)</AssemblyVersion>
-    <AssemblyInformationalVersion>$(kd_version_major).$(kd_version_minor).$(kd_version_patch)$(kd_version_suffix)</AssemblyInformationalVersion>
+    <Title>TrIdent.Specifications</Title>
+    <PackageId>TrIdent.Specifications</PackageId>
     <Authors>Ken McGowan</Authors>
     <Company>kenmcgowan.com</Company>
   </PropertyGroup>
+
+  <Import Project="..\metadata.generated.csproj" Condition="Exists('..\metadata.generated.csproj')" />
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.4.2" />
