--- a/TrIdent.Specifications/TrIdent.Specifications.csproj
+++ b/TrIdent.Specifications/TrIdent.Specifications.csproj
@@ -2,9 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
-    <IsPackable>false</IsPackable>
+    <Title>TrIdent.Specifications</Title>
+    <PackageId>TrIdent.Specifications</PackageId>
+    <Authors>Ken McGowan</Authors>
+    <Company>kenmcgowan.com</Company>
   </PropertyGroup>
+
+  <Import Project="..\metadata.generated.csproj" Condition="Exists('..\metadata.generated.csproj')" />
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.4.2" />
