--- a/TrIdent/TrIdent.csproj
+++ b/TrIdent/TrIdent.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Title>TrIdent</Title>
+    <PackageId>TrIdent</PackageId>
+    <Authors>Ken McGowan</Authors>
+    <Company>kenmcgowan.com</Company>
   </PropertyGroup>
+
+  <Import Project="..\metadata.generated.csproj" Condition="Exists('..\metadata.generated.csproj')" />
 
 </Project>
