--- a/do/.env
+++ b/do/.env
@@ -1,7 +1,8 @@
-export kd_module=$(cat .metadata/module | xargs)
-export kd_project=$(cat .metadata/project | xargs)
-export kd_version_major=$(cat .metadata/version_major | xargs)
-export kd_version_minor=$(cat .metadata/version_minor | xargs)
-export kd_version_patch=$(cat .metadata/version_patch | xargs)
-export kd_version_build=$(cat .metadata/version_build | xargs)
+#!/bin/bash
+export kd_module=$(cat .metadata/module)
+export kd_project=$(cat .metadata/project)
+export kd_version_major=$(cat .metadata/version_major)
+export kd_version_minor=$(cat .metadata/version_minor)
+export kd_version_patch=$(cat .metadata/version_patch)
+export kd_version_build=$(cat -v .metadata/version_build)
 export kd_version_suffix=-alpha.$kd_version_build
