--- a/do/.env
+++ b/do/.env
@@ -1,8 +1,8 @@
 #!/bin/bash
-export kd_module=$(cat .metadata/module)
-export kd_project=$(cat .metadata/project)
-export kd_version_major=$(cat .metadata/version_major)
-export kd_version_minor=$(cat .metadata/version_minor)
-export kd_version_patch=$(cat .metadata/version_patch)
-export kd_version_build=$(cat -v .metadata/version_build)
+export kd_module=$(cat .metadata/module | tr -d '\r\n\t ')
+export kd_project=$(cat .metadata/project | tr -d '\r\n\t ')
+export kd_version_major=$(cat .metadata/version_major | tr -d '\r\n\t ')
+export kd_version_minor=$(cat .metadata/version_minor | tr -d '\r\n\t ')
+export kd_version_patch=$(cat .metadata/version_patch | tr -d '\r\n\t ')
+export kd_version_build=$(cat -v .metadata/version_build | tr -d '\r\n\t ')
 export kd_version_suffix=-alpha.$kd_version_build
