TI-8: Attempted fix in travis yml that's triggereing multiple jobs in each stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ env:
 jobs:
   include:
     - stage: Build
-    - script: ./.ci/build
+      script: ./.ci/build
     - stage: Test
-    - script: ./.ci/test
+      script: ./.ci/test
