TI-8: Fixed variable reference errors in build yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ jobs:
   include:
     - stage: Info
       script:
-      - echo "Is Tag Build     => %kd_is_tag_build"
-      - echo "Is Alpha Build   => %kd_is_alpha_build"
-      - echo "Is Beta Build    => %kd_is_beta_build"
-      - echo "Is Release Build => %kd_is_release_build"
+      - echo "Is Tag Build     => $kd_is_tag_build"
+      - echo "Is Alpha Build   => $kd_is_alpha_build"
+      - echo "Is Beta Build    => $kd_is_beta_build"
+      - echo "Is Release Build => $kd_is_release_build"
     - stage: Build
       script: ./.ci/build
     - stage: Test
