TI-8: Moving build and unit test back into a single stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,8 @@ env:
     kd_is_alpha_build=$( if [[ $kd_is_tag_build == 0 && $kd_is_beta_build == 0 && $kd_is_release_build == 0 ]]; then echo -n 1; else echo -n 0; fi; )
 jobs:
   include:
-    - stage: Info
+    - stage: Build and Unit Test
       script:
-      - echo "Is Tag Build     => $kd_is_tag_build"
-      - echo "Is Alpha Build   => $kd_is_alpha_build"
-      - echo "Is Beta Build    => $kd_is_beta_build"
-      - echo "Is Release Build => $kd_is_release_build"
-    - stage: Build
-      script: ./.ci/build
-    - stage: Test
-      script: ./.ci/test
+      - echo "Is Tag Build     => $kd_is_tag_build"; echo "Is Alpha Build   => $kd_is_alpha_build"; echo "Is Beta Build    => $kd_is_beta_build"; echo "Is Release Build => $kd_is_release_build"
+      - ./.ci/build
+      - ./.ci/test
