--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,13 @@ env:
     kd_is_tag_build=$( if [[ $TRAVIS_BRANCH == $TRAVIS_TAG ]]; then echo -n 1; else echo -n 0; fi; )
     kd_is_beta_build=$( if [[ $kd_is_tag_build == 0 && $TRAVIS_BRANCH == "develop" ]]; then echo -n 1; else echo -n 0; fi; )
     kd_is_release_build=$( if [[ $kd_is_tag_build == 0 && $TRAVIS_BRANCH == "master" ]]; then echo -n 1; else echo -n 0; fi; )
-    kd_is_alpha_build=$( if [[ $kd_is_tag_build == 0 && $kd_is_beta_build == 0 && $kd_is_release_build == 0 ]]; then echo -n 1; else echo -n 0; fi; )
+    kd_is_alpha_build=$( if [[ $kd_is_tag_build == 0 && $kd_is_beta_build == 0 && $kd_is_release_build == 0 && $TRAVIS_BRANCH == feature\/* ]]; then echo -n 1; else echo -n 0; fi; )
+    kd_is_dev_build=$( if [[ $kd_is_tag_build == 0 && $kd_is_beta_build == 0 && $kd_is_release_build == 0 && $kd_is_alpha_build == 0 ]]; then echo -n 1; else echo -n 0; fi; )
+    kd_build_type=$( if [[ $kd_is_tag_build == 1 ]]; then echo -n TAG; elif [[ $kd_is_dev_build == 1 ]]; then echo -n DEV; elif [[ $kd_is_alpha_build == 1 ]]; then echo -n ALPHA; elif [[ $kd_is_beta_build == 1 ]]; then echo -n BETA; elif [[ $kd_is_release_build == 1 ]]; then echo -n "RELEASE"; else echo -n UNKNOWN; fi; )
 jobs:
   include:
     - stage: Build and Unit Test
       script:
-      - echo "Is Tag Build     => $kd_is_tag_build"; echo "Is Alpha Build   => $kd_is_alpha_build"; echo "Is Beta Build    => $kd_is_beta_build"; echo "Is Release Build => $kd_is_release_build"
+      - echo "$kd_build_type build:"; echo "Is Tag Build     => $kd_is_tag_build"; echo "Is Dev Build => $kd_is_dev_build"; echo "Is Alpha Build   => $kd_is_alpha_build"; echo "Is Beta Build    => $kd_is_beta_build"; echo "Is Release Build => $kd_is_release_build"
       - ./.ci/build
       - ./.ci/test
