--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,11 @@ env:
     kd_version_build=$TRAVIS_BUILD_NUMBER
     kd_version_suffix=$( if [[ $kd_is_tag_build == 1 ]]; then echo -n "-adhoc.$kd_version_build+TAG"; elif [[ $kd_is_dev_build == 1 ]]; then echo -n "-adhoc.$kd_version_build"; elif [[ $kd_is_alpha_build == 1 ]]; then echo -n "-alpha.$kd_version_build"; elif [[ $kd_is_beta_build == 1 ]]; then echo -n "-beta.$kd_version_build"; elif [[ $kd_is_release_build == 1 ]]; then echo -n ""; else echo -n "[UNKNOWN BUILD TYPE]"; fi; )
     kd_package_semver="$kd_version_major.$kd_version_minor.$kd_version_patch$kd_version_suffix"
+    kd_package_name="$kd_module.$kd_package_semver"
 jobs:
   include:
     - stage: Build and Unit Test
       script:
-      - echo "$kd_build_type build:"; echo "Is Tag Build     => $kd_is_tag_build"; echo "Is Dev Build     => $kd_is_dev_build"; echo "Is Alpha Build   => $kd_is_alpha_build"; echo "Is Beta Build    => $kd_is_beta_build"; echo "Is Release Build => $kd_is_release_build"; echo "Pkg SemVer       => $kd_package_semver"
+      - echo "$kd_build_type build:"; echo "Is Tag Build     => $kd_is_tag_build"; echo "Is Dev Build     => $kd_is_dev_build"; echo "Is Alpha Build   => $kd_is_alpha_build"; echo "Is Beta Build    => $kd_is_beta_build"; echo "Is Release Build => $kd_is_release_build"; echo "Package Name     => $kd_package_name"
       - ./.ci/build
       - ./.ci/test
