--- a/do/.env
+++ b/do/.env
@@ -1,7 +1,15 @@
-export kd_module=$(cat .metadata/module | xargs)
-export kd_project=$(cat .metadata/project | xargs)
-export kd_version_major=$(cat .metadata/version_major | xargs)
-export kd_version_minor=$(cat .metadata/version_minor | xargs)
-export kd_version_patch=$(cat .metadata/version_patch | xargs)
-export kd_version_build=$(cat .metadata/version_build | xargs)
-export kd_version_suffix=-alpha.$kd_version_build
+export kd_is_tag_build=0
+export kd_is_dev_build=1
+export kd_is_alpha_build=0
+export kd_is_beta_build=0
+export kd_is_release_build=0
+export kd_build_type=DEV
+export kd_module=$(cat .metadata/module | tr -d '\r\n\t ')
+export kd_project=$(cat .metadata/project | tr -d '\r\n\t ')
+export kd_version_major=$(cat .metadata/version_major | tr -d '\r\n\t ')
+export kd_version_minor=$(cat .metadata/version_minor | tr -d '\r\n\t ')
+export kd_version_patch=$(cat .metadata/version_patch | tr -d '\r\n\t ')
+export kd_version_build=$(cat .metadata/version_build | tr -d '\r\n\t ')
+export kd_version_suffix="-adhoc.$kd_version_build+LOCAL"
+export kd_package_semver="$kd_version_major.$kd_version_minor.$kd_version_patch$kd_version_suffix"
+export kd_package_name="$kd_module.$kd_package_semver"
