--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,4 @@ jobs:
       - echo "$kd_build_type build:"; echo "Is Tag Build     => $kd_is_tag_build"; echo "Is Dev Build     => $kd_is_dev_build"; echo "Is Alpha Build   => $kd_is_alpha_build"; echo "Is Beta Build    => $kd_is_beta_build"; echo "Is Release Build => $kd_is_release_build"; echo "Package Name     => $kd_package_name"
       - ./.ci/build
       - ./.ci/test
+      - ./.ci/publish
