--- a/TrIdent.Specifications/TrIdent.Specifications.csproj
+++ b/TrIdent.Specifications/TrIdent.Specifications.csproj
@@ -8,6 +8,7 @@
     <Company>kenmcgowan.com</Company>
     <Copyright>Copyright © 2018 Ken McGowan. All Rights Reserved.</Copyright>
     <RepositoryType>git</RepositoryType>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <Import Project="..\metadata.generated.csproj" Condition="Exists('..\metadata.generated.csproj')" />
