TI-8: Removed diagnostic ls; publish generated packages

--- a/do/.env
+++ b/do/.env
@@ -13,3 +13,4 @@ export kd_version_build=$(cat .metadata/version_build | tr -d '\r\n\t ')
 export kd_version_suffix="-adhoc.$kd_version_build+LOCAL"
 export kd_package_semver="$kd_version_major.$kd_version_minor.$kd_version_patch$kd_version_suffix"
 export kd_package_name="$kd_module.$kd_package_semver"
+export kd_spec_package_name="$kd_module.Specifications.$kd_package_semver"
