--- a/TrIdent.Specifications/TrIdent.Specifications.csproj
+++ b/TrIdent.Specifications/TrIdent.Specifications.csproj
@@ -6,6 +6,9 @@
     <PackageId>TrIdent.Specifications</PackageId>
     <Authors>Ken McGowan</Authors>
     <Company>kenmcgowan.com</Company>
+    <Copyright>Copyright © 2018 Ken McGowan. All Rights Reserved.</Copyright>
+    <RepositoryType>git</RepositoryType>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <Import Project="..\metadata.generated.csproj" Condition="Exists('..\metadata.generated.csproj')" />
